Added placeholder files for upload.html preprocess.html data_analysis.html feature_extract.html classify.html

--- a/workbench/static/css/base.css
+++ b/workbench/static/css/base.css
@@ -1,3 +1,14 @@
-body{
-    background-color: green;
+#cpp-logo{
+    height: 10em;
+    width: auto;
+}
+
+header{
+    min-height: 30mm;
+    background-color: #06ffab;
+}
+
+footer{
+    min-height: 30mm;
+    background-color: #06ffab;
 }
