--- a/workbench/static/css/base.css
+++ b/workbench/static/css/base.css
@@ -1,3 +1,146 @@
+#container {
+		min-height:100%;
+		position:relative;
+	}
+
+/* Style the header */
+.header {
+  background: #555;
+  color: #f1f1f1;
+}
+
+/* Page content */
+.content {
+  padding: 1%;
+}
+
+/* The sticky class is added to the header with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 0;
+}
+
+/*------Footer------*/
+ 	#footer {
+		position:relative;
+		bottom:0;
+		width:100%;
+		height:60px;			/* Height of the footer */
+		background-color: white;
+	}
+
+    #footer p {
+		margin:0;
+		padding:10px;
+	}
+
+
+/*--------MENU Styling-----------*/
+.menuborder {
+  border-style: solid;
+  border-width: 1px;
+  border-color: #ffffff #0000ff #ffffff #ffffff;
+}
+
+.mainmenu {
+  height: 0px;
+}
+
+.mainmenu ul#nav {
+  opacity: 1;
+  visibility: visible;
+    background-color: white;
+  list-style: outside none none;
+  margin: 0;
+  padding: 0;
+  text-align: left;
+}
+
+.mainmenu ul#nav li {
+  display: inline-block;
+  position: relative;
+}
+
+.mainmenu ul#nav li a {
+  color: #266696;
+  display: block;
+  margin: 0 -2px;
+  padding: 2px 15px;
+  text-transform: uppercase;
+}
+
+.mainmenu ul#nav li:hover>a {
+  background: #11c3f1 none repeat scroll 0 0;
+}
+
+
+/*=================
+DropDown Menu
+===================*/
+
+#nav>li {
+  position: relative;
+}
+
+#nav>li:hover ul {
+  opacity: 1;
+  z-index: 9999;
+  top: 100%;
+  visibility: visible;
+}
+
+#nav>li ul {
+  background: #fff none repeat scroll 0 0;
+  opacity: 0;
+  left: -2px;
+  list-style: outside none none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  text-align: left;
+  transition: all 0.5s ease 0s;
+  width: 204px;
+  padding-left: 2px;
+  z-index: -99999;
+  top: 150%;
+  visibility: hidden
+}
+
+#nav>li ul li {
+  display: block;
+  width: 200px;
+}
+
+.mainmenu ul#nav li ul li a:hover {
+  color: #fff;
+  border-radius: 0 0 80px 0;
+  border-left: 4px solid #000;
+  padding-left: 10px;
+}
+
+.mainmenu ul#nav li ul li a {
+  border-bottom: 1px solid #ddd;
+  color: #000;
+  padding: 10px 10px;
+}
+
+.mainmenu ul#nav li ul li.sub-sub-menu ul {
+  position: absolute;
+  left: 100%;
+  top: 0px;
+  display: none;
+}
+
+.mainmenu ul#nav li ul li.sub-sub-menu:hover ul {
+  display: block;
+}
+
 body{
     background-color: green;
 }
