Created and linked the preprocess page

--- a/workbench/static/css/base.css
+++ b/workbench/static/css/base.css
@@ -10,7 +10,7 @@
 
 /* Style the header */
 .header {
-  background: #555;
+  background: #555;pure
   color: #f1f1f1;
 }
 
@@ -147,5 +147,5 @@ DropDown Menu
 }
 
 body {
-  background-color: green;
+  background-color: whitesmoke;
 }
