User's can now load in sensors from an uploaded file and view the amount of data they have

--- a/workbench/templates/workbench/upload.html
+++ b/workbench/templates/workbench/upload.html
@@ -31,7 +31,8 @@
 	.button-error,
 	.button-warning,
 	.button-secondary {
-	    color: white;
+	    color: white;/view
+
 	    border-radius: 4px;
 	    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 	}
@@ -434,7 +435,7 @@
                             {% endfor %}
                         </select>
 						<button type="button" class="pure-button"
-							id="eeg-source-load-bttn" >view</button>
+							id="eeg-source-load-bttn" >Load</button>
 						</fieldset>
 					</form>
 					<div id="eeg-source-set-wrap" >
@@ -463,7 +464,7 @@
                             {% endfor %}
                         </select>
 						<button type="button" class="pure-button"
-							id="eeg-target-load-bttn" >view</button>
+							id="eeg-target-load-bttn" >Load</button>
 					</fieldset>
 					</form>
 					<div id="eeg-target-set-wrap" >
